# continuing-education

./: .gitignore  README.md  example.env  publish_to_pypi.sh  pyproject.toml  requirements.txt  setup.py
docker/vastai/: .gitignore  Dockerfile  build_with_this.bash  domain_tune_llm.py  download_hf_model.bash  onstart.sh  start_jupyter.bash  sync_checkpoints.bash
examples/: domain_tune_llm.py  domain_tune_llm_qlora.py  vast_sync.bash
src/continuing_education/: __init__.py  checkpoint_manager.py  checkpoint_registry.py  continuing_trainer.py
tests/: conftest.py  test_checkpoint_registry.py  test_remote_checkpoint_synchronizer.py
tests/utils/: directory_dict.py  misc.py  persistent_temporary_directory.py  s3_dict.py  temp_s3_object.py
